remove metadata from available_appointments
This was in some documentation, but doesn't actually exist
