# swagger/v1/swagger.json
@@ -29,25 +29,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "metadata": {
-                  "type": "object",
-                  "properties": {
-                    "resultset": {
-                      "type": "object",
-                      "properties": {
-                        "count": {
-                          "type": "integer"
-                        },
-                        "offset": {
-                          "type": "integer"
-                        },
-                        "limit": {
-                          "type": "integer"
-                        }
-                      }
-                    }
-                  }
-                },
                 "results": {
                   "type": "array",
                   "items": {
